# Tetris-C

./: CMakeLists.txt  README.md
src/: board.c  board.h  main.c  tetromino.c  tetromino.h
